--- a/app/templates/auth/partials/_alert.html
+++ b/app/templates/auth/partials/_alert.html
@@ -1,4 +1,5 @@
 {% set alerts = get_flashed_messages(with_categories=true) %}
+<!-- {{ alerts }} -->
 <style>
   .alert-container {
     position: fixed;
