--- a/app/static/app/assets/css/style.css
+++ b/app/static/app/assets/css/style.css
@@ -279,13 +279,14 @@ BUTTONS STYLE
 }
 .btn-close {
   --at-btn-close-color: var(--at-secondary-color);
-  margin-left: 15px;
-  font-weight: bold;
-  float: right;
-  font-size: 30px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
+  --at-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var%28--at-secondary-color%29'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+  --at-btn-close-opacity: 0.5;
+  --at-btn-close-hover-opacity: 0.8;
+  --at-btn-close-focus-shadow: none;
+  --at-btn-close-focus-opacity: 1;
+  --at-btn-close-disabled-opacity: 0.25;
+  --at-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
   width: 1em;
   height: 1em;
@@ -300,6 +301,29 @@ BUTTONS STYLE
   color: var(--at-btn-close-color);
   text-decoration: none;
   opacity: var(--at-btn-close-hover-opacity);
+}
+.btn-close:focus {
+  outline: 0;
+  -webkit-box-shadow: var(--at-btn-close-focus-shadow);
+  box-shadow: var(--at-btn-close-focus-shadow);
+  opacity: var(--at-btn-close-focus-opacity);
+}
+.btn-close.disabled,
+.btn-close:disabled {
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  opacity: var(--at-btn-close-disabled-opacity);
+}
+.btn-close-white {
+  -webkit-filter: var(--at-btn-close-white-filter);
+  filter: var(--at-btn-close-white-filter);
+}
+[data-bs-theme="dark"] .btn-close {
+  -webkit-filter: var(--at-btn-close-white-filter);
+  filter: var(--at-btn-close-white-filter);
 }
 a {
   color: #0077b5;
