--- a/app/templates/profile/view.html
+++ b/app/templates/profile/view.html
@@ -15,12 +15,9 @@
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Googleapis Font -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu|Poetsen One|Briem Hand">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu|Poetsen One|Josefin Sans">
         <!-- animate.css -->
         <link rel="stylesheet" href="/static/app/assets/css/animate.css">
-        <!-- Owl Carousel  CSS -->
-        <link rel="stylesheet" href="/static/app/assets/css/owl.carousel.min.css">
-        <link rel="stylesheet" href="/static/app/assets/css/owl.theme.default.min.css">
         <!-- Main Stylesheet -->
         <link rel="stylesheet" href="/static/app/assets/css/style.css">
         <link rel="stylesheet" href="/static/app/assets/css/responsive.css">
@@ -40,10 +37,6 @@
                                     <a href="mailto:#">example@example.com</a>
                                 </li>
                             </ul>
-                        </div>
-                        <div class="col-lg-6 col-md-6">
-                           
-                            </div>
                         </div>
                     </div>
                 </div>    
