--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -38,7 +38,7 @@
                                             <p class="text-muted mb-2">Enter your Fullname, email address, username, contact and password to create an account</p>
                                             <!-- form -->
                                             <form action="{{ url_for('auth.register_page') }}" method="POST">
-                                                {% include "auth/partials/_alert.html" %}
+                                                {% include "partials/_alert.html" %}
                                                 {{ form.csrf_token }}
                                                 <div class="mb-1">
                                                     {{ form.name.label }} {{ form.name() }}
