--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="header-right float-right">
                                 <div class="header-btn">
-                                    <a href="{{ url_for('user.user_page') }}" class="btn btn-main btn-small">
+                                    <a href="{{ url_for('user.user_page', user_id=user.user_id) }}" class="btn btn-main btn-small">
                                         <i class="fa fa-user ml-1"></i> View Profile
                                     </a>
                                 </div>
@@ -117,7 +117,7 @@
                     <div class="col-lg-8">
                         <!-- form -->
                         <form class="contact__form form-row " method="POST" action="{{ url_for('arm_num_checker.home_page') }}">
-                            {% include "auth/partials/_alert.html" %}                            
+                            {% include "partials/_alert.html" %}                            
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
