--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -41,7 +41,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="header-right float-right">
                                 <div class="header-btn">
-                                    <a href="{{ url_for('user.user_page', user_id=user.id) }}" class="btn btn-main btn-small">
+                                    <a href="{{ url_for('user.user_page', user_id=user.user_id) }}" class="btn btn-main btn-small">
                                         <i class="fa fa-user ml-1"></i> View Profile
                                     </a>
                                 </div>
@@ -115,7 +115,7 @@
                 </div>
             </section>
             <!-- Page Header End -->
-
+             
             <section class="contact-info section-padding" id="armstrong-form-section">
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
